@@ -55,6 +55,7 @@ Changelog for 1.3.14
 * Fixed pos ignores pd_proto and always connects tcp (Chris T, bug 3458112)
 * Error now displayed when currencies are not defined (Chris T, bug 3509555)
 * Fixed "no obvious way to select credit account" (Chris T, bug 3510564)
+* Added code to unlink backup files after sent (Chris T)
 
 Andres B is Andres Basile
 
